fix not centred skeleton display, added manifest

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -37,6 +37,7 @@ body {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(1, 1fr);
     grid-column-gap: 11px;
+    justify-items: center;
 
     @media (max-width: 1400px) {
       grid-template-columns: repeat(3, 1fr);
@@ -156,7 +157,12 @@ body {
   }
 
   .content__items {
-    display: block;
+    // display: block;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-column-gap: 11px;
+    justify-items: center;
   }
 
   &__item {
